# DO_Batch_inference_engine

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  database.py  error_handlers.py  exceptions.py  logger.py  logging_config.py  main.py  middleware.py  mock_api.py  schemas.py  worker.py
app/routers/: batches.py  system.py
app/services/: engine.py
tests/: conftest.py  test_database.py  test_engine.py  test_routes.py  test_worker.py
