[project]
name = "batch-inference-engine"
version = "0.1.0"
description = "Batch AI prompt inference REST API with concurrent processing and rate-limit handling"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.3",
    "pydantic>=2.13.4",
    "python-multipart>=0.0.32",
    "slowapi>=0.1.10",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "anyio>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = ["app/mock_api.py"]
